# edumark-beauty

./: README.md  index.html  package-lock.json  package.json  tauri.sh  vite.config.ts
.github/workflows/: tauri-build.yml
public/: site.webmanifest
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: docx_export.rs  image_compress.rs  lib.rs  main.rs  project_loader.rs  qr_generator.rs
src/components/config/: ConfigPanel.tsx
src/components/editor/: EditorToolbar.tsx  EdmEditor.tsx  block-nesting.ts  code-highlight.ts  comment-fold.ts  editor-commands.ts  image-preview-widget.ts  markdown-highlight.ts  mermaid-edit-widget.ts  (+4 more)
src/hooks/: useBookPagination.ts  useIncludeLinks.ts  useMermaid.ts  useMermaidEditButtons.ts  useQuestionInteractivity.ts  useSlides.ts  useSvgEditButtons.ts
src/lib/: bookLayoutParser.ts  dialogs.ts  edmindex.ts  embedToPrint.ts  exportBookDocx.ts  exportBookPdf.ts  exportDocx.ts  exportHtml.ts  exportPdf.ts  exportPptx.ts  exportPptxNative.ts  exportPptxRaster.ts  exportPresentation.ts  exportPresentationPdf.ts  exportSnippet.ts  fileAdapter.ts  filterSlideHtml.ts  imageToBase64.ts  interactivity.ts  mermaidSourcePatch.ts  slideParser.ts  svgSourcePatch.ts  themeEmbed.ts
src/store/: bookLayout.ts  contentMode.ts  document.ts  theme.ts  ui.ts
src/styles/: book.css  index.css  mermaid-editor.css  presentation.css  preview-base.css  svg-editor.css
src/types/: bookLayout.ts  contentMode.ts  index.ts  theme.ts
(+37 files in other folders)
