[package]
name = "edumark-beauty"
version = "0.1.0"
description = "Edumark Beauty — editor y visor de documentos educativos"
authors = ["Debaq"]
edition = "2021"

[lib]
name = "edumark_beauty_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
rayon = "1"
regex = "1"
